EducationScreen: Show a different string for our profiles
Change-Id: I44e3636e63aa10b04c167a4ceed61b110e0765ad

--- a/res/values/calyx_strings.xml
+++ b/res/values/calyx_strings.xml
@@ -15,4 +15,5 @@
      limitations under the License.
 -->
 <resources>
+  <string name="calyx_work_profile_provisioning_step_3_header">Data in your work profile</string>
 </resources>
